@@ -1,19 +1,19 @@
 package com.ginogipsy.magicbus.marshall;
 
 
-import com.ginogipsy.magicbus.customexception.notfound.VinoNotFoundException;
-import com.ginogipsy.magicbus.domain.enums.WineQuality;
 import com.ginogipsy.magicbus.domain.Wine;
+import com.ginogipsy.magicbus.domain.enums.WineQuality;
 import com.ginogipsy.magicbus.dto.WineDTO;
 import com.ginogipsy.magicbus.repository.WineRepository;
+import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Component;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-
+@Slf4j
 @Component
 public class WineMapper {
 
@@ -25,35 +25,71 @@ public class WineMapper {
         this.wineRepository = wineRepository;
     }
 
-    public Wine convertToEntity(WineDTO wineDTO){
-        return (wineDTO != null) ? modelMapper.map(wineDTO, Wine.class) : null;
+    public Wine convertToEntity(final WineDTO wineDTO){
+        return Optional.ofNullable(wineDTO)
+                .map(w -> modelMapper.map(w, Wine.class))
+            .orElse(null);
     }
 
-    public WineDTO convertToDTO(Wine wine){
-        return (wine != null) ? modelMapper.map(wine, WineDTO.class) : null;
+    public WineDTO convertToDTO(final Wine wine){
+        return Optional.ofNullable(wine)
+                .map(w -> modelMapper.map(w, WineDTO.class))
+            .orElse(null);
     }
 
-    public WineDTO findByName(String name){
-        return Optional.ofNullable(wineRepository.findByName(name)).map(this::convertToDTO).orElseThrow(() -> new VinoNotFoundException("Vino non trovato"));
+    public WineDTO findByName(final String name){
+        log.info("Searching wines where name is " + name+ "..");
+        return Optional.ofNullable(name)
+                .map(wineRepository::findByName)
+                .map(this::convertToDTO)
+                .orElse(null);
     }
 
-    public List<WineDTO> findByWineryName(String wineryName){
-        return Optional.of(wineRepository.findByWinery_Name(wineryName).stream().map(this::convertToDTO).collect(Collectors.toList())).orElseThrow(() -> new VinoNotFoundException("Vini per questa cantina - "+wineryName+ " - non sono disponibili"));
+    public List<WineDTO> findByWineryName(final String wineryName){
+        log.info("Searching wines where winery name is " + wineryName+ "..");
+        return Optional.ofNullable(wineryName)
+                .map(w -> wineRepository.findByWinery_Name(w)
+                        .stream()
+                        .map(this::convertToDTO)
+                        .toList())
+                .orElse(new ArrayList<>());
     }
 
-    public List<WineDTO> findByAvailable(boolean available){
-        return Optional.of(wineRepository.findByAvailable(available).stream().map(this::convertToDTO).collect(Collectors.toList())).orElseThrow(() -> new VinoNotFoundException("Vini disponibili non trovati"));
+    public List<WineDTO> findByAvailable(final boolean available){
+        log.info("Searching wine where availability is " + available+ "..");
+        return wineRepository.findByAvailable(available)
+                .stream()
+                .map(this::convertToDTO)
+                .toList();
+        }
+
+    public List<WineDTO> findByWineQuality(final String wineQuality){
+        log.info("Searching wines where wine quality is " + wineQuality+ "..");
+        return Optional.ofNullable(wineQuality)
+                .map(wq -> wineRepository.findByWineQuality(WineQuality.valueOf(wq))
+                        .stream()
+                        .map(this::convertToDTO)
+                        .toList())
+                .orElse(new ArrayList<>());
     }
 
-    public List<WineDTO> findByWineQuality(String wineQuality){
-        return Optional.of(wineRepository.findByWineQuality(WineQuality.valueOf(wineQuality)).stream().map(this::convertToDTO).collect(Collectors.toList())).orElseThrow(() -> new VinoNotFoundException("Vini per questa qualità - "+wineQuality+" - non disponibili"));
+    public List<WineDTO> findByAvailableAndWineryName(final boolean available, final String wineryName){
+        log.info("Searching wines where availability is "+available+" and winery name is " + wineryName+ "..");
+        return Optional.ofNullable(wineryName)
+                .map(wn -> wineRepository.findByAvailableAndWinery_Name(available, wn)
+                        .stream()
+                        .map(this::convertToDTO)
+                        .toList())
+                .orElse(new ArrayList<>());
     }
 
-    public List<WineDTO> findByAvailableAndWineryName(boolean available, String wineryName){
-        return Optional.of(wineRepository.findByAvailableAndWinery_Name(available,wineryName).stream().map(this::convertToDTO).collect(Collectors.toList())).orElseThrow(() -> new VinoNotFoundException("Vini disponibili per questa cantina - "+wineryName+" - non trovati"));
-    }
-
-    public List<WineDTO> findByAvailableAndWineQuality(boolean available, String wineQuality){
-        return Optional.of(wineRepository.findByAvailableAndWineQuality(available, WineQuality.valueOf(wineQuality)).stream().map(this::convertToDTO).collect(Collectors.toList())).orElseThrow(() -> new VinoNotFoundException("Vini disponibili per questa qualità - "+wineQuality+" - non trovati"));
+    public List<WineDTO> findByAvailableAndWineQuality(final boolean available, final String wineQuality){
+        log.info("Searching wines where availability is "+available+" and wine quality is " + wineQuality+ "..");
+        return Optional.ofNullable(wineQuality)
+                .map(wq -> wineRepository.findByAvailableAndWineQuality(available, WineQuality.valueOf(wq))
+                        .stream()
+                        .map(this::convertToDTO)
+                        .toList())
+                .orElse(new ArrayList<>());
     }
 }
